--- a/reactform/src/app/app.component.html
+++ b/reactform/src/app/app.component.html
@@ -3,15 +3,38 @@
       <label for="firstName">First Name :</label>
       <input type="firstName" class="form-control"
        id="firstName" formControlName="firstName">
+    <div class="alert alert-danger" *ngIf = "isFirstNameInvalid">  
+      <span class="text text-danger"> {{firstNameValidationMessage}} </span>
+    </div>
     </div>
 
     <div class="form-group">
-      <label for="lastName :"> Last Name :</label>
+      <label for="lastName"> Last Name :</label>
       <input type="lastName" class="form-control" 
       id="lastName" formControlName="lastName">
+      <div class="alert alert-danger" *ngIf = "isLastNameInvalid">  
+        <span class="text text-danger"> {{lastNameValidationMessage}} </span>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="email"> Email-ID :</label>
+      <input type="email" class="form-control" 
+      id="lastName" formControlName="email">
+      <div class="alert alert-danger" *ngIf = "isEmailInvalid">  
+        <span class="text text-danger"> Please enter valid email id </span>
+      </div>
     </div>
 
    <button type="submit" class="btn btn-primary btn-block">Submit</button>
 
 </div>
-  
+
+<pre>
+  Value :   {{user.value|json}}
+  Valid :   {{user.status|json}}
+  Touched : {{user.touched|json}}
+
+  {{this.user.controls['firstName'].errors|json}}
+  {{this.user.controls['lastName'].errors|json}}
+</pre>
