--- a/reactform/src/app/app.component.html
+++ b/reactform/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="container" [formGroup] = "user">
+<form class="container" [formGroup] = "user" (submit)='submitUser()'>
+<div class="form-group">
   <div class="form-group">
     <label for="Name">Name:</label>
     <input type="name" class="form-control" 
@@ -28,10 +29,9 @@
       {{ emailInvalidMessage }}
     </span>
   </div>
-
-  <button type="submit" class="btn btn-primary btn-block">Submit</button>
-
-</div> 
+</div>
+  <button [disabled]="isFormInvalid" type="submit" class="btn btn-primary btn-block">Submit</button>
+</form>
 
 <pre>
   Value   : {{user.value|json}}
